Fix build on JDK11